--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "axios": "^0.18.0",
     "dotenv": "^6.2.0",
     "moment": "^2.24.0",
-    "node-spotify-api": "^1.0.7"
+    "node-spotify-api": "^1.0.7",
+    "save": "^2.3.3"
   },
   "devDependencies": {},
   "keywords": [],
